Adds Stripe integration to StitchLens.  Adds Cross-stitch support.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ patterns/
 secrets.json
 appsettings.*.Local.json
 appsettings.*.UserSecrets.json
+appsettings.Development.json
+appsettings.*.json
 
 # Logs
 *.log
