--- a/StitchLens.Web/appsettings.json
+++ b/StitchLens.Web/appsettings.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=stitchlens.db"
   },
+  "Stripe": {
+    "PublishableKey": "STRIPE_PUBLISHABLE_KEY_REDACTED",
+    "SecretKey": "STRIPE_SECRET_REDACTED",
+    "WebhookSecret": "STRIPE_WEBHOOK_SECRET_REDACTED",
+    "PriceIds": {
+      "Hobbyist": "price_1SbpSSFiTiD9qoU887veIxiO",
+      "Creator": "price_1SbpT9FiTiD9qoU83VpMDr8t"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
