--- a/StitchLens.Core/StitchLens.Core.csproj
+++ b/StitchLens.Core/StitchLens.Core.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="QuestPDF" Version="2025.7.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="Stripe.net" Version="50.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
